@@ -40,12 +40,12 @@
 /* Run all the functions hooked on the set called NAME.
    Each function is called like this: `function ARGS'.  */
 
-# define RUN_HOOK(NAME, ARGS) \
-do {									   \
-  void (*const *ptr) (void);						   \
-  for (ptr = symbol_set_first_element (NAME);				   \
-       ! symbol_set_end_p (NAME, ptr); ++ptr)				   \
-    (*(__##NAME##_hook_function_t *) *ptr) ARGS;			   \
+# define RUN_HOOK(NAME, ARGS)				\
+do {							\
+  void *const *__unbounded ptr;				\
+  for (ptr = symbol_set_first_element (NAME);		\
+       ! symbol_set_end_p (NAME, ptr); ++ptr)		\
+    (*(__##NAME##_hook_function_t *) *ptr) ARGS;	\
 } while (0)
 
 /* Define a hook variable with NAME and PROTO, and a function called RUNNER
